syntax = "proto3";

option csharp_namespace = "GrpcService";
import "google/protobuf/empty.proto";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
   rpc GetCustomer (GetCustomerRequest) returns (CustomerResponse);


}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message GetCustomerRequest {
    string customer_id = 1;
}

message CustomerResponse {
    string name = 1;
    string email = 2;
    // Diğer müşteri bilgileri buraya eklenebilir
}
